# tantivy-ccrawl

./: .gitignore
indexer/: Cargo.toml  README.md
indexer/src/: main.rs  urls-list.shorter.txt.rs  warc_reader.rs
