[package]
name = "tantivy-commoncrawl"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]

[dependencies]
curl = "0.4"
structopt = "0.2"
structopt-derive = "0.2"
log = "0.4"
env_logger = "0.4.3"
tantivy = "0.7"
whatlang = "0.5"
serde_json = "*"
chan = "0.1.19"
itertools = "0.7.4"
libflate = "0.1"
flate2 = "1.0.1"
rayon = "0.9.0"
futures = "*"
indicatif = "0.9.0"
console = "0.6.1"

[profile.release]
opt-level = 3
lto = true
